fixed spacing, moved style from edit_wardrobe to style.css

--- a/static/style.css
+++ b/static/style.css
@@ -44,3 +44,176 @@
 .session-inventory-items {
   padding: 5px;
 }
+
+.clothing-name {
+  margin-top: 10px;
+  border-bottom: 1px solid #444;
+  padding: 15px 0px;
+}
+#search {
+  display: inline-block;
+  vertical-align: top;
+}
+#tf {
+  cursor: text;
+}
+.module-form {
+
+}
+#editable {
+  padding: 3px;
+  margin: 0px 3px 3px;
+  height:1em;background-color:none;display:inline-block;vertical-align:top
+}
+.tag {
+  vertical-align:top;
+  border: 1px solid #48f;
+  color: #48f;
+  display: inline-block;
+  margin: 0px 3px 0px;
+  padding: 2px 4px;
+  border-radius: 7px;
+}
+.clothing {
+  color: #444;
+  margin: 0 5px 10px;
+  padding: 20px;
+  display: inline-block;
+  border-radius: 6px;
+  border: 1px solid black;
+  width: 12%;
+  text-align: center;
+  font: 16px "museo-sans", Helvetica, Arial, sans-serif;
+  text-transform: uppercase;
+  height: 120px;
+  vertical-align: middle;
+  font-weight: 700;
+  -webkit-font-smoothing: antialiased;
+  font-size: 16px;
+  white-space: nowrap;
+}
+.cloth-button{
+  background-color: #FFF;
+  border: 1px solid #444;
+  color: #444;
+  padding: 5px 18px;
+  margin: 0px 4px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 10px;
+  border-radius:30px;
+}
+
+#sidenav {
+  height: 100%;
+  width: 10%;
+  float: left;
+}
+#main {
+  width: calc(90% - 25px);
+  float: left;
+  padding-left: 25px;
+}
+#sidenav a, #sidenav button{
+  background-color: white;
+  text-align: left;
+  cursor: pointer;
+  display: block;
+  padding: 6px 10px 5px 25px;
+  margin-left: -20px;
+  margin-bottom: 10px;
+  border-radius: 10px;
+  border-top: solid black 1px;
+  border-right: solid black 1px;
+  border-bottom: solid black 1px;
+  border-left: none;
+  width: 100%;
+  box-sizing: initial;
+  text-decoration: none;
+  color: black;
+  font: 13px "museo-sans", Helvetica, Arial, sans-serif;
+  text-transform: uppercase;
+}
+.clothing-tag {
+  display: inline-block;
+  padding: 3px 7px;
+  border: 1px solid #555;
+  border-radius: 10px;
+  color: black;
+  margin: 2px 2px;
+  text-decoration: none;
+}
+.clothing-tag.selected{
+  display: inline-block;
+  padding: 3px 7px;
+  border: 1px solid #555;
+  border-radius: 10px;
+  color: white;
+  background-color: black;
+  margin: 2px 2px;
+  text-decoration: none;
+}
+.clothing-tag-clear {
+  display: inline-block;
+  vertical-align:bottom;
+  color: black;
+  font-size: 13px;
+}
+#tag-container {
+  margin-bottom: 20px;
+  width: calc(100% - 300px);
+  display: inline-block;
+}
+input[type=text][name=search]{
+  width: 130px;
+  box-sizing: border-box;
+  border: 1px solid #444;
+  color: #444;
+  border-radius: 4px;
+  font-size: 13px;
+  background-color: white;
+  /*background-image: url('searchicon.png');*/
+  background-position: 10px 10px;
+  background-repeat: no-repeat;
+  padding: 10px 10px 10px 20px;
+  -webkit-transition: width 0.4s ease-in-out;
+  transition: width 0.4s ease-in-out;
+}
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px 15px 1px;
+  width: 300px;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
